# sacred_host_game

./: .gitignore  CMakeLists.txt  CharacterGO.cpp  CharacterGO.h  CollisionLayer.cpp  CollisionLayer.h  FadingTextBox.cpp  FadingTextBox.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  MouseController.cpp  MouseController.h  ObjectManager.cpp  ObjectManager.h  Pinpoint.cpp  Pinpoint.h  SFX.cpp  SFX.h  SFXManager.cpp  SFXManager.h  TextBox.cpp  TextBox.h  TextManager.cpp  TextManager.h  TextureManager.cpp  TextureManager.h  VisualEffect.cpp  VisualEffect.h  main.cpp
assets/: EarthWastelandsMap.pyxel  MartianGroundMap.pyxel  Untitled.pyxel  colliders.txt  map.txt  tilesetEarthWastelands.pyxel  tilesetMartianGround.pyxel
cmake_modules/: FindSDL2_image.cmake
